fix: auto increment external and grant revoke access tenant to regulations
