# docs/swagger.json
@@ -614,6 +614,48 @@
                 }
             }
         },
+        "/api/v1/regulations/{id}/assign-tenant": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RegulationsService"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Regulation ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Tenant Data",
+                        "name": "tenant",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.AssignTenantRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/regulations/{id}/items": {
             "get": {
                 "produces": [
@@ -886,6 +928,78 @@
                             "type": "object",
                             "additionalProperties": {
                                 "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/regulations/{id}/revoke-tenant": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RegulationsService"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Regulation ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Tenant Data",
+                        "name": "tenant",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.AssignTenantRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/regulations/{id}/tenants": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RegulationsService"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Regulation ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/biz.TenantRegulation"
                             }
                         }
                     }
@@ -1366,6 +1480,9 @@
                 "id": {
                     "type": "string"
                 },
+                "isActive": {
+                    "type": "boolean"
+                },
                 "regulationID": {
                     "type": "string"
                 },
@@ -1434,11 +1551,39 @@
                 }
             }
         },
+        "biz.TenantRegulation": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "regulationID": {
+                    "type": "string"
+                },
+                "tenantID": {
+                    "type": "string"
+                }
+            }
+        },
         "service.AddMappingRequest": {
             "type": "object",
             "properties": {
                 "property_id": {
                     "type": "string"
+                }
+            }
+        },
+        "service.AssignTenantRequest": {
+            "type": "object",
+            "properties": {
+                "tenant_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -1460,7 +1605,7 @@
                     "type": "string"
                 },
                 "item_code": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "property_ids": {
                     "type": "array",
@@ -1486,6 +1631,9 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                },
+                "tenant_id": {
                     "type": "string"
                 },
                 "title": {
@@ -1548,7 +1696,7 @@
                     "type": "string"
                 },
                 "item_code": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "property_ids": {
                     "type": "array",
